added door and windows and ceiling light

--- a/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1150,6 +1150,10 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
+RecentlyPlaced=/Game/StarterContent/Props/SM_WindowFrame.SM_WindowFrame;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Door_400x400.Wall_Door_400x400;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Window_400x400.Wall_Window_400x400;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Window_400x300.Wall_Window_400x300;
@@ -1163,8 +1167,12 @@ RecentlyPlaced=/Script/Engine.AtmosphericFog;/Engine/Transient.ActorFactoryAtmos
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Architecture/Wall_500x500
+MRUItem0=/Game/StarterContent/Props/SM_Lamp_Ceiling
+MRUItem1=/Game/StarterContent/Architecture/Wall_400x400
+MRUItem2=/Game/StarterContent/Architecture/Wall_500x500
 
 [AssetEditorToolkitTabLocation]
 /Game/StarterContent/Architecture/Wall_500x500.Wall_500x500=1
+/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400=1
+/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling=1
 
