finished with like step 5 or something

--- a/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1143,6 +1143,18 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+PointLight.TransformCommon=True
+PointLight.Light=True
+PointLight.Rendering=True
+PointLight.Lightmass=True
+PointLight.Performance=True
+PointLight.LightFunction=True
+PointLight.Light Profiles=True
+PointLight.DistanceFieldShadows=True
+PointLight.RayTracing=True
+PointLight.Tags=True
+PointLight.Cooking=True
+PointLight.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1150,6 +1162,8 @@ LightmassImportanceVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettin
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
 RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
 RecentlyPlaced=/Game/StarterContent/Props/SM_WindowFrame.SM_WindowFrame;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
