--- a/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1092,7 +1092,7 @@ Brush.TransformCommon=True
 Brush.BrushSettings=True
 Brush.Replication=True
 Brush.Actor=True
-DirectionalLight.TransformCommon=False
+DirectionalLight.TransformCommon=True
 DirectionalLight.Light=True
 DirectionalLight.Rendering=False
 DirectionalLight.Lightmass=False
@@ -1240,6 +1240,9 @@ BP_Sky_Sphere_C="\"Object.Override settings.Zenith Color\" \"Object.Override set
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_PillarFrame300.SM_PillarFrame300;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
+RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Window_400x400.Wall_Window_400x400;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
@@ -1257,9 +1260,6 @@ RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDir
 RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
-RecentlyPlaced=/Game/StarterContent/Props/SM_DoorFrame.SM_DoorFrame;
-RecentlyPlaced=/Game/StarterContent/Props/SM_WindowFrame.SM_WindowFrame;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/NewMap
@@ -1274,9 +1274,9 @@ MRUItem3=/Game/StarterContent/Architecture/Wall_500x500
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Color Grading.Color Grading,
-BrushComponent=
+BrushComponent=PostProcessVolume.Color Grading.Color Grading,
 Brush=PostProcessVolume.Color Grading.Color Grading,
-SceneComponent=PostProcessVolume.Color Grading.Color Grading,
+SceneComponent=
 BP_Sky_Sphere_C=PostProcessVolume.Color Grading.Color Grading,
 
 [PluginBrowser]
