--- a/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -66,7 +66,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=160)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -95,12 +95,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-AIS90Q9
 LastExecutedLaunchName=DESKTOP-AIS90Q9
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
+MultipleInstancePositions=(X=320,Y=160)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1083,6 +1085,7 @@ MRUItem0=/Game/NewMap
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+QualityLevel=3
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -1240,11 +1243,14 @@ BP_Sky_Sphere_C="\"Object.Override settings.Zenith Color\" \"Object.Override set
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/StarterContent/Props/SM_Statue.SM_Statue;
+RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
+RecentlyPlaced=/Game/StarterContent/Props/SM_WindowFrame.SM_WindowFrame;
 RecentlyPlaced=/Game/StarterContent/Props/SM_PillarFrame300.SM_PillarFrame300;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Chair.SM_Chair;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_Window_400x400.Wall_Window_400x400;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
 RecentlyPlaced=/Game/StarterContent/Architecture/Floor_400x400.Floor_400x400;
 RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_Cylinder.Shape_Cylinder;
@@ -1257,9 +1263,6 @@ RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBo
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.LightmassImportanceVolume;/Engine/Transient.ActorFactoryBoxVolume_14
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
-RecentlyPlaced=/Game/StarterContent/Architecture/Wall_500x500.Wall_500x500;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
 
 [ContentBrowserRecent]
 MRUItem0=/Game/NewMap
@@ -1273,11 +1276,11 @@ MRUItem3=/Game/StarterContent/Architecture/Wall_500x500
 /Game/StarterContent/Props/SM_Lamp_Ceiling.SM_Lamp_Ceiling=1
 
 [DetailCustomWidgetExpansion]
-PostProcessVolume=PostProcessVolume.Color Grading.Color Grading,
-BrushComponent=PostProcessVolume.Color Grading.Color Grading,
+PostProcessVolume=PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,
+BrushComponent=
 Brush=PostProcessVolume.Color Grading.Color Grading,
 SceneComponent=
-BP_Sky_Sphere_C=PostProcessVolume.Color Grading.Color Grading,
+BP_Sky_Sphere_C=PostProcessVolume.Color Grading.Color Grading,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|ExposureAdvanced,
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
