--- a/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/LevelDesignProject/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ LastLevel=/Game/NewMap
 LastLogListing=LightingResults
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=1280.000 Y=670.000
